--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,9 +19,7 @@
     
 
 
-    a :hover{
-        text-decoration: line-through 3px;
-    }
+
     .header {
     grid-area: h;
     background-color: #f2e9de;
@@ -45,10 +43,6 @@
     footer {
     grid-area: f;
     background-color: #f2e9de;
-    
-
-    
-    
     }
 
     li {
@@ -68,8 +62,10 @@
     }
         
     .classes {
-        display: flex;
-        flex-direction: column;
+       color: #3e8fb0;
+       text-align: center;
+       margin: 60px;
+       line-height: 30px;
     }
     
 
@@ -80,6 +76,31 @@
        font-size: 20px;
 
     }
+
+    .add {
+        color: #3e8fb0;
+        font-size: 30px;
+        position: relative;
+        bottom: 135px;
+        left: 100px;
+    }
+
+    .save {
+        color: #3e8fb0;
+        font-size: 15px;
+        position: relative;
+        top: 80px;
+        right: 50px;
+    
+    }
+
+    .delete {
+        color: #b4637a;
+        font-size: 15px;
+        position: relative;
+        top: 80px;
+        right: 40px;
+    }
     .sidebar {
         color: #3e8fb0;
         font-size: 25px;
@@ -88,7 +109,13 @@
         top: 10px;
     }
 
-    
+    .sidebar-closing {
+        color: #3e8fb0;
+        font-size: 25px;
+        position: relative;
+        left: 175px;
+        bottom: 190px;
+    }
 
     .message {
         position: relative;
@@ -102,6 +129,14 @@
         top: 55px;
         text-align: center;
         
+    }
+
+    .textbox {
+        background-color: #fffaf3;
+        color: #817c9c;
+        position: relative;
+        left: 100px;
+        top: 60px;
     }
 
     
