--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 * { 
     margin: 0;
     padding: 0;
-    font-family: 'Major Mono Display', monospace;
+    font-family: 'Source Sans Pro', sans-serif;
     }
     .container { 
      display: grid;
@@ -61,7 +61,7 @@
     
     }
         
-    .classes {
+    .notelist {
        color: #3e8fb0;
        text-align: center;
        margin: 60px;
