--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,15 +3,16 @@
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
     }
+
+
     .container { 
      display: grid;
      grid-template-rows: 5rem 1fr 5rem;
-     grid-template-columns: 250px 1fr;
+     grid-template-columns: minimax(0px,auto) 1fr;
      grid-template-areas: 
-     's h h'
-     's m m'
-     's f f';
-     gap: 5px;
+     's h'
+     's m'
+     's f';
      width: 100vw;
      height: 100vh;
     
