--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,17 +24,22 @@
     .header {
     grid-area: h;
     background-color: #f2e9de;
-    color:#3e8fb0 ;
-    
     
     
     }
     .side {
     grid-area: s;
     background-color:#f2e9de;
-    color: #3e8fb0;
+    padding: 5px;
     
     
+    }
+    .side h1 {
+      font-size: 3rem;  
+      color: #575279;
+    }
+    .side ul {
+        overflow: auto;
     }
     .main {
     grid-area: m;
