--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -72,77 +72,40 @@
         margin: 10px;
       max-width: 500px;
     }
-    
+    .textinput {
+        height: 150px;
+        background-color:#f2e9de;
+    }
 
     .note {
         
         color: #3e8fb0;
         position:relative ;
-       font-size: 20px;
+        border-radius: 5px;
+        caret-color: #eb6f92;
+       font-size: 2rem;
 
     }
 
-    .add {
-        color: #3e8fb0;
-        font-size: 30px;
-        position: relative;
-        bottom: 135px;
-        left: 100px;
+    button {
+        background-color: #2a273f;
+        color: #e0def4;
+        border: none;
+        border-radius: 5px;
+        font-size: 2rem;
+        padding: 2px;
+        margin-top: 5px;
+        margin-left: 10px;
     }
-
-    .save {
-        color: #3e8fb0;
-        font-size: 15px;
-        position: relative;
-        top: 80px;
-        right: 50px;
     
-    }
 
-    .delete {
-        color: #b4637a;
-        font-size: 15px;
-        position: relative;
-        top: 80px;
-        right: 40px;
-    }
-    .sidebar {
-        color: #3e8fb0;
-        font-size: 25px;
-        position: relative;
-        left: 15px;
-        top: 10px;
-    }
+    
+    
 
-    .sidebar-closing {
-        color: #3e8fb0;
-        font-size: 25px;
-        position: relative;
-        left: 175px;
-        bottom: 190px;
-    }
-
-    .message {
-        position: relative;
-        left: 20px;
-        bottom: 20px;
-    }
-
-    .creator {
-        color:#3e8fb0 ;
-        position: relative;
-        top: 55px;
-        text-align: center;
-        
-    }
-
-    .textbox {
-        background-color: #fffaf3;
-        color: #817c9c;
-        position: relative;
-        left: 100px;
-        top: 60px;
-    }
+   .note-buttons {
+      display: flex; 
+      justify-content: end;
+   }
 
     
     @media screen and (min-width:1280px) {
