--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -106,20 +106,39 @@
       display: flex; 
       justify-content: end;
    }
+   p {
+       color: #3e8fb0;
+       font-size: 2rem;
+   }
 
     
-    @media screen and (min-width:1280px) {
-        body {
-            color: #3e8fb0;
-        }
-    
+    @media screen and (max-width:600px) {
+        
+    .container { 
+        display: grid;
+        grid-template-rows: 5rem 1fr 5rem;
+        grid-template-areas: 
+        'h h'
+        's s'
+        'm m'
+        'f f';
+        width: 100vw;
+        height: 100vh;
+       
+       }
+       .side {
+           display: flex;
+           justify-content: center;
+       }
+       .side-ul {
+           margin-left: 5px;
+       }
+    .note-area {
+        max-width: 100vw;
+    }
+    .note-buttons {
+        justify-content: center;
+    }
     }
     
-    
-    @media screen and (max-width:480px) {
-        body {
-            font-size: 8px; 
-            text-align: left; 
-           
-        }   
-    }
+   
